--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    
 <button id='button_cfd1d'  style="position: absolute; left: 27.224998474121094px; top: 29.750030517578125px; width: 100px; height: 50px; ">Button</button>
 
+   
+<p id='p'  style="position: absolute; left: 24.82500457763672px; top: 107.3499984741211px; width: 150px; height: 35px; ">Some text for this paragraph</p>
+
  
   </div>
 
